--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/drawer": "^7.5.0",
-    "expo": "~54.0.27",
-    "expo-constants": "~18.0.11",
+    "expo": "~54.0.29",
+    "expo-constants": "~18.0.12",
     "expo-document-picker": "~14.0.8",
-    "expo-file-system": "~19.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-image-manipulator": "~14.0.8",
-    "expo-image-picker": "^17.0.9",
+    "expo-image-picker": "~17.0.10",
     "expo-keep-awake": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-print": "^15.0.8",
-    "expo-router": "^6.0.17",
+    "expo-router": "~6.0.19",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
