--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Dijital Torpido",
-    "slug": "dijital-torpido",
+    "name": "Dijital Çekmecem",
+    "slug": "dijital-cekmecem",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
