--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dijital-torpido",
+  "name": "dijital-cekmecem",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -23,8 +23,8 @@
     "expo-router": "~6.0.19",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
