--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/drawer": "^7.5.0",
-    "expo": "~54.0.29",
+    "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
@@ -19,9 +20,9 @@
     "expo-image-picker": "~17.0.10",
     "expo-keep-awake": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
-    "expo-linking": "~8.0.10",
+    "expo-linking": "~8.0.11",
     "expo-print": "^15.0.8",
-    "expo-router": "~6.0.19",
+    "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
